// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default HeroCard 1`] = `
<div
  className="css-14nx622-Container e1s1ktis5"
>
  <div
    className="css-103e74w-StyledTitle e1s1ktis4"
  >
    Save development time with Drop-in Components
  </div>
  <div
    className="css-13ktynt-StyledDescription e1s1ktis3"
  >
    Integrate with the Dwolla API with just a few lines of code 
  </div>
</div>
`;

exports[`HeroCard - with Button 1`] = `
<div
  className="css-14nx622-Container e1s1ktis5"
>
  <div
    className="css-103e74w-StyledTitle e1s1ktis4"
  >
    Save development time with Drop-in Components
  </div>
  <div
    className="css-13ktynt-StyledDescription e1s1ktis3"
  >
    Integrate with the Dwolla API with just a few lines of code 
  </div>
  <div
    className="css-bmqhrd-StyledButton e1s1ktis2"
  >
    <a
      className="hollow-white standard  css-ux75yb-StyledLink-buttonStyles-buttonStyles ek3ainu0"
      href="https://www.dwolla.com"
    >
      View Walkthrough Guide
    </a>
  </div>
</div>
`;

exports[`HeroCard - with Button and Links 1`] = `
<div
  className="css-14nx622-Container e1s1ktis5"
>
  <div
    className="css-103e74w-StyledTitle e1s1ktis4"
  >
    Save development time with Drop-in Components
  </div>
  <div
    className="css-13ktynt-StyledDescription e1s1ktis3"
  >
    Integrate with the Dwolla API with just a few lines of code 
  </div>
  <div
    className="css-bmqhrd-StyledButton e1s1ktis2"
  >
    <a
      className="hollow-white standard  css-ux75yb-StyledLink-buttonStyles-buttonStyles ek3ainu0"
      href="https://www.dwolla.com"
    >
      View Walkthrough Guide
    </a>
  </div>
  <div
    className="css-1spkmsc-StyledLink e1s1ktis1"
  >
    <a
      className="css-uc36zz-StyledAnchor e1s1ktis0"
      href="https://www.dwolla.com"
    >
      Technical Documentation
       &gt;
    </a>
  </div>
  <div
    className="css-1spkmsc-StyledLink e1s1ktis1"
  >
    <a
      className="css-uc36zz-StyledAnchor e1s1ktis0"
      href="https://www.dwolla.com"
      target="_blank"
    >
      Learn about the components
       &gt;
    </a>
  </div>
</div>
`;

exports[`HeroCard - with Links 1`] = `
<div
  className="css-14nx622-Container e1s1ktis5"
>
  <div
    className="css-103e74w-StyledTitle e1s1ktis4"
  >
    Save development time with Drop-in Components
  </div>
  <div
    className="css-13ktynt-StyledDescription e1s1ktis3"
  >
    Integrate with the Dwolla API with just a few lines of code 
  </div>
  <div
    className="css-1spkmsc-StyledLink e1s1ktis1"
  >
    <a
      className="css-uc36zz-StyledAnchor e1s1ktis0"
      href="https://www.dwolla.com"
    >
      Technical Documentation
       &gt;
    </a>
  </div>
  <div
    className="css-1spkmsc-StyledLink e1s1ktis1"
  >
    <a
      className="css-uc36zz-StyledAnchor e1s1ktis0"
      href="https://www.dwolla.com"
      target="_blank"
    >
      Learn about the components
       &gt;
    </a>
  </div>
</div>
`;
